# jindata_agents

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  agents.py  main.py  pyproject.toml  tools.py
jindata_agents/: agents.py  cli.py  crews.py  ec_test.py  llms.py  tasks.py  tools.py
libs/: jindata-0.4.16-py3-none-any.whl
