[tool.poetry]
name = "jindata-agents"
version = "0.1.0"
description = "finance agents for data retrieve, transform, format, and so on."
authors = ["markqiu <qiucheng@jinniuai.com>"]
readme = "README.md"

[tool.poetry.scripts]
jagent = "jindata_agents:cli.app"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {version = "^0.19.0", extras = ["tools"], python =  ">=3.10,<=3.13"}
matplotlib = "^3.8.3"
quickfs = "^0.1.1"
finvizfinance = "^0.14.7"
typer = "^0.9.0"
html5lib = "^1.1"
embedchain = "^0.1.97"
openai = "~1.13.4"
jindata = {path = "libs/jindata-0.4.16-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
line-length = 200
skip-string-normalization = true

[tool.ruff]
line-length = 200
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"docs_src/dependencies/tutorial007.py" = ["F821"]
"docs_src/dependencies/tutorial008.py" = ["F821"]
"docs_src/dependencies/tutorial009.py" = ["F821"]
"docs_src/dependencies/tutorial010.py" = ["F821"]
"docs_src/custom_response/tutorial007.py" = ["B007"]
"docs_src/dataclasses/tutorial003.py" = ["I001"]
"docs_src/path_operation_advanced_configuration/tutorial007.py" = ["B904"]
"docs_src/custom_request_and_route/tutorial002.py" = ["B904"]
"docs_src/dependencies/tutorial008_an.py" = ["F821"]
"docs_src/dependencies/tutorial008_an_py39.py" = ["F821"]
"docs_src/query_params_str_validations/tutorial012_an.py" = ["B006"]
"docs_src/query_params_str_validations/tutorial012_an_py39.py" = ["B006"]
"docs_src/query_params_str_validations/tutorial013_an.py" = ["B006"]
"docs_src/query_params_str_validations/tutorial013_an_py39.py" = ["B006"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
